<resources>
    <string name="app_name">ConstraintSample</string>

    <string name="string_request_gps_location_title">GPS 사용 권한 요청</string>
    <string name="string_request_gps_location_denied">위치 정보를 알기 위해서는 GPS 사용 권한이 필요합니다.</string>
    <string name="string_request_gps_progress_title">위치 정보 갱신중…</string>
    <string name="string_request_nearby_station_progress_title">가장 가까운 역을 찾는중…</string>
    <string name="string_request_nearby_station_prev_next_progress_title">앞 뒤 역을…</string>
    <string name="string_request_gps_success">위치 정보 갱신 완료</string>
    <string name="string_request_gps_failed">위치 정보 갱신에 실패했어요.</string>
    <string name="string_request_network_failed">네트워크 상태가 원활하지 않아요.</string>
    <string name="string_unknown_error">알 수 없는 에러</string>

    <string name="string_current_nearby_station">이 역과 가장 가까워요</string>

    <string name="line_1">1호선</string>
    <string name="line_2">2호선</string>
    <string name="line_3">3호선</string>
    <string name="line_4">4호선</string>
    <string name="line_5">5호선</string>
    <string name="line_6">6호선</string>
    <string name="line_7">7호선</string>
    <string name="line_8">8호선</string>
    <string name="line_9">9호선</string>
    <string name="line_10">공항철도</string>
    <string name="line_11">인천1호선</string>
    <string name="line_12">인천2호선</string>
    <string name="line_13">경의중앙선</string>
    <string name="line_14">경춘선</string>
    <string name="line_15">분당선</string>
    <string name="line_16">수인선</string>
    <string name="line_17">신분당선</string>
    <string name="line_18">경강선</string>
    <string name="line_19">서해선</string>
    <string name="line_20">의정부경전철</string>
    <string name="line_21">용인경전철</string>
    <string name="line_22">우이신설선</string>
    <string name="line_23">인천공항\n자기부상철도</string>
    <string name="line_unknown">나도 잘 몰라</string>

</resources>
