<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/color_bg"
              android:orientation="vertical"
              android:padding="20dp">

    <TextView
            android:id="@+id/txt_title_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:textColor="@color/color_txt_n"
            android:textSize="19sp"
            android:textStyle="bold"/>

    <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_select_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_1"
                android:text="@string/line_1"
                android:textColor="@color/color_bg"
                android:tag="@string/line_1"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_2"
                android:text="@string/line_2"
                android:textColor="@color/color_bg"
                android:tag="@string/line_2"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_3"
                android:text="@string/line_3"
                android:textColor="@color/color_bg"
                android:tag="@string/line_3"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_4"
                android:text="@string/line_4"
                android:textColor="@color/color_bg"
                android:tag="@string/line_4"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_5"
                android:text="@string/line_5"
                android:textColor="@color/color_bg"
                android:tag="@string/line_5"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_6"
                android:text="@string/line_6"
                android:textColor="@color/color_bg"
                android:tag="@string/line_6"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_7"
                android:text="@string/line_7"
                android:textColor="@color/color_bg"
                android:tag="@string/line_7"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_8"
                android:text="@string/line_8"
                android:textColor="@color/color_bg"
                android:tag="@string/line_8"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_9"
                android:text="@string/line_9"
                android:textColor="@color/color_bg"
                android:tag="@string/line_9"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_10"
                android:text="@string/line_10"
                android:textColor="@color/color_bg"
                android:tag="@string/line_10"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_11"
                android:text="@string/line_11"
                android:textColor="@color/color_bg"
                android:tag="@string/line_11"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_12"
                android:text="@string/line_12"
                android:textColor="@color/color_bg"
                android:tag="@string/line_12"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_13"
                android:text="@string/line_13"
                android:textColor="@color/color_bg"
                android:tag="@string/line_13"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_14"
                android:text="@string/line_14"
                android:textColor="@color/color_bg"
                android:tag="@string/line_14"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_15"
                android:text="@string/line_15"
                android:textColor="@color/color_bg"
                android:tag="@string/line_15"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_16"
                android:text="@string/line_16"
                android:textColor="@color/color_bg"
                android:tag="@string/line_16"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_17"
                android:text="@string/line_17"
                android:textColor="@color/color_bg"
                android:tag="@string/line_17"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_18"
                android:text="@string/line_18"
                android:textColor="@color/color_bg"
                android:tag="@string/line_18"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_19"
                android:text="@string/line_19"
                android:textColor="@color/color_bg"
                android:tag="@string/line_19"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_20"
                android:text="@string/line_20"
                android:textColor="@color/color_bg"
                android:tag="@string/line_20"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_21"
                android:text="@string/line_21"
                android:textColor="@color/color_bg"
                android:tag="@string/line_21"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_22"
                android:text="@string/line_22"
                android:textColor="@color/color_bg"
                android:tag="@string/line_22"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_23"
                android:text="@string/line_23"
                android:textColor="@color/color_bg"
                android:tag="@string/line_23"
                android:textStyle="bold"/>

        <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_line_unknown"
                android:text="@string/line_unknown"
                android:textColor="@color/color_bg"
                android:tag="@string/line_unknown"
                android:textStyle="bold"/>
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>